# benchmaker

./: .gitignore  README.md  RELEASE_RUNBOOK.md  TAURI2_MIGRATION_ASSESSMENT.md  TESTING_METHODOLOGY.md  UPDATE_ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.design-sync/: NOTES.md  config.json  conventions.md  prebuild.mjs  tsconfig.dts.json
.design-sync/overrides/: source-kit.mjs
.design-sync/previews/: AlertDialog.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Collapsible.tsx  ConfirmDialog.tsx  Dialog.tsx  DropdownMenu.tsx  EmptyState.tsx  Input.tsx  Label.tsx  Progress.tsx  ResizablePanelGroup.tsx  ScrollArea.tsx  Select.tsx  Separator.tsx  Slider.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx
.github/workflows/: build.yml  quality.yml
plans/: code-arena-plan.md
scripts/: release-preflight.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scoring/: code-arena-judge.ts  exact-match.ts  index.ts  judge-calibration.ts  llm-judge.ts  numeric-tolerance.ts  regex-match.ts  scoring.test.ts
src/services/: abort.test.ts  abort.ts  analytics.ts  benchmarkGenerator.ts  codeArenaExecution.ts  codeExtractor.test.ts  codeExtractor.ts  costControls.test.ts  costControls.ts  execution.ts  localDb.test.ts  localDb.ts  monaco.test.ts  monaco.ts  openrouter.test.ts  openrouter.ts  promptEnhancer.ts  secureApiKey.ts  testCaseGenerator.ts  updater.test.ts  updater.ts
src/stores/: codeArenaRunStore.ts  (+6 more)
(+73 files in other folders)
