[package]
name = "benchmaker"
version = "0.1.8"
description = "Benchmaker"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-request", "window-minimize", "window-start-dragging", "window-close", "window-maximize", "window-unmaximize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2.3.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
